added my github SegmentingClusteringToronto

--- a/SegmentingClusteringToronto.ipynb
+++ b/SegmentingClusteringToronto.ipynb
@@ -1116,10 +1116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
+    "{\n",
+    "    \"tags\": [\n",
+    "        \"hide-input\",\n",
+    "    ]\n",
+    "}\n",
+    "\n",
     "CLIENT_ID = 'ZFL0IPLDJP1B4C1MFUNUW44ULJIEZG5ZWA2SXSDR0UVHFEHZ' \n",
     "CLIENT_SECRET = 'BTEVEAKDMB5ZCLVOPV5MAMYLS5CHZLSRPI0A42M01EHUHNOF' \n",
     "VERSION = '20180605'\n",
@@ -1128,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1226,7 @@
        "4 -79.388790  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
