added my github SegmentingClusteringToronto

--- a/SegmentingClusteringToronto.ipynb
+++ b/SegmentingClusteringToronto.ipynb
@@ -1120,12 +1120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{\n",
-    "    \"tags\": [\n",
-    "        \"hide-input\",\n",
-    "    ]\n",
-    "}\n",
-    "\n",
+    "# @hiidden_cell\n",
     "CLIENT_ID = 'ZFL0IPLDJP1B4C1MFUNUW44ULJIEZG5ZWA2SXSDR0UVHFEHZ' \n",
     "CLIENT_SECRET = 'BTEVEAKDMB5ZCLVOPV5MAMYLS5CHZLSRPI0A42M01EHUHNOF' \n",
     "VERSION = '20180605'\n",
