--- a/SegmentingClusteringToronto.ipynb
+++ b/SegmentingClusteringToronto.ipynb
@@ -1116,15 +1116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @hiidden_cell\n",
+    "{\n",
+    "    \"tags\": [\n",
+    "        \"hide-cell\",\n",
+    "    ]\n",
+    "}\n",
+    "\n",
     "CLIENT_ID = 'ZFL0IPLDJP1B4C1MFUNUW44ULJIEZG5ZWA2SXSDR0UVHFEHZ' \n",
     "CLIENT_SECRET = 'BTEVEAKDMB5ZCLVOPV5MAMYLS5CHZLSRPI0A42M01EHUHNOF' \n",
     "VERSION = '20180605'\n",
-    "LIMIT = 100 "
+    "LIMIT = 100 \n",
+    "    \n",
+    "    \n"
    ]
   },
   {
