added my github SegmentingClusteringToronto

--- a/SegmentingClusteringToronto.ipynb
+++ b/SegmentingClusteringToronto.ipynb
@@ -1117,10 +1117,13 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
-    "# @hidden_cell\n",
     "\n",
     "CLIENT_ID = 'ZFL0IPLDJP1B4C1MFUNUW44ULJIEZG5ZWA2SXSDR0UVHFEHZ' \n",
     "CLIENT_SECRET = 'BTEVEAKDMB5ZCLVOPV5MAMYLS5CHZLSRPI0A42M01EHUHNOF' \n",
@@ -1230,7 +1233,7 @@
     }
    ],
    "source": [
-    "# @show_cell\n",
+    "\n",
     "toronto_data = neighborhoods[neighborhoods['Borough'].str.contains('Toronto')].reset_index(drop=True)\n",
     "toronto_data.head()"
    ]
