--- a/SegmentingClusteringToronto.ipynb
+++ b/SegmentingClusteringToronto.ipynb
@@ -1125,9 +1125,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "CLIENT_ID = 'ZFL0IPLDJP1B4C1MFUNUW44ULJIEZG5ZWA2SXSDR0UVHFEHZ' \n",
-    "CLIENT_SECRET = 'BTEVEAKDMB5ZCLVOPV5MAMYLS5CHZLSRPI0A42M01EHUHNOF' \n",
-    "VERSION = '20180605'\n",
+    "CLIENT_ID = '******' \n",
+    "CLIENT_SECRET = '*******' \n",
+    "VERSION = '*****'\n",
     "LIMIT = 100 \n",
     "    \n",
     "    \n"
